# google-docs-mcp-server

./: .containerignore  .env.example  .gitignore  Containerfile  README.md  SECURITY.md  main.py  mkdocs.yml  pyproject.toml  templates.yaml.example
.github/workflows/: docs.yml  publish.yml
docs/: development.md  index.md  security.md
docs/features/: comment-preservation.md  file-upload.md  tabs.md  templates.md
docs/getting-started/: oauth-setup.md  quickstart.md
docs/tools/: google-docs.md  google-slides.md
mcp_server/: auth.py  config.py  main.py  nonce.py  validation.py
mcp_server/services/: batch_style_writer.py  diff_updater.py  docx_converter.py  google_docs_service.py  google_sheets_service.py  google_slides_service.py  markdown_converter.py  slides_markdown_converter.py
mcp_server/tools/: __init__.py  common.py  google_docs_tools.py  google_sheets_tools.py  google_slides_tools.py
mcp_server/utils/: retry.py
tests/: conftest.py  test_auth.py  test_batch_style_writer.py  test_config.py  test_diff_updater.py  test_docx_converter.py  test_google_docs_service.py  test_google_docs_tools.py  test_google_sheets_service.py  test_google_sheets_tools.py  test_google_slides_service.py  test_google_slides_tools.py  test_markdown_converter.py  test_nonce.py  test_retry.py  test_slides_markdown_converter.py  test_validation.py
