[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "google-docs-mcp-server"
version = "0.1.0"
description = "MCP server for Google Docs operations"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.11.3",
    "google-api-python-client>=2.150.0",
    "google-auth-oauthlib>=1.2.0",
    "google-auth-httplib2>=0.2.0",
    "markdown>=3.7.0",
    "pyyaml>=6.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-mock>=3.14.1",
    "black>=25.1.0",
    "isort>=6.0.1",
    "ruff>=0.12.8",
    "bandit>=1.8.6",
]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E203", "B008", "B006", "C901", "E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["B011"]

[tool.bandit]
exclude_dirs = ["tests", ".venv", "venv", "env", "site-packages"]
skips = ["B101"]

[tool.hatch.build.targets.wheel]
only-include = ["mcp_server/", "main.py"]
